# django-cache-lock

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  requirements.txt  setup.cfg
.github/workflows/: ci.yml
django_cache_lock/: __init__.py  apps.py  cache_lock.py  cache_lock_manager.py  settings.py
tests/: test_cache_lock.py  test_cache_lock_manager.py  test_settings.py
tests/tests/cache_lock/: test_cache_lock.py
